--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,7 @@ img {display: block;
 
 
 /* --------------------------- HEADER */
+
 .page-header {
     border-bottom: 1px solid #ECECEC;
 }
@@ -73,8 +74,9 @@ display: flex;
 .menu-item:not(:last-child) {
     margin-right: 50px;
 }
-
-
+.menu-item {
+    position: relative;
+}
 .contacts {
  display: flex;  margin-left: auto; }
 
@@ -107,6 +109,19 @@ font-weight: 500;
 line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--colour-main);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.main-page::after {
+    position: absolute;
+    display: block;
+    content:"";
+    width: 100%;
+    height: 4px;
+    background: #2196F3;
+    border-radius: 2px;
+    left: 0;
+    bottom: -32px;
 }
 
 .menu-link:hover,
@@ -122,6 +137,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 fill: var(--colour-contacts);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .phone_svg {
@@ -266,6 +282,28 @@ margin-top: -30px;
     margin-left: 30px;
     margin-top: 30px;
 }
+.about-us-img-wrapper {
+    position: relative;
+}
+
+.about-us-item-overlay {
+position: absolute;
+bottom: 0px;
+left: 0px;
+width: 100%;
+height: 70px;
+display: flex;
+justify-content: center;
+align-items: center;
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+text-align: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #FFFFFF;
+background: rgba(47, 48, 58, 0.8);
+}
 
 /* --------------------------- /ABOUT US  */
 
@@ -326,6 +364,7 @@ margin-bottom: 16px;}
     height: 44px;
     border-radius: 50%;
     background-color: transparent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list-link:hover,
@@ -338,7 +377,10 @@ margin-bottom: 16px;}
     fill: #FFFFFF;
 }
 
-.social-list-icon {fill:#AFB1B8}
+.social-list-icon {fill:#AFB1B8;
+transition:fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
 
 .social-list-item:not(:last-child) {
     margin-right: 10px;
@@ -364,10 +406,12 @@ height: 92px;
 display: flex;
 justify-content: center;
 align-items: center;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .regular-client-icon {
 fill:#AFB1B8;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .regular-client-link:hover .regular-client-icon,
@@ -404,6 +448,10 @@ background: #F5F4FA;
 border-radius: 4px;   
 border: 0px;
 padding: 6px 22px;
+transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .works-item {
@@ -422,12 +470,41 @@ color: white;
 cursor:pointer;
 box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 border-radius: 4px;
-outline: 0px;
 }
 
 /* -------------------- /FILTER BTNS */
 
 /* -------------------- PORTFOLIO WORKS */
+
+.work-img-wrapper {
+    position: relative;
+    overflow: hidden;
+
+}
+
+.work-img-descriprion-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(33, 150, 243, 0.9);
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    padding: 63px 24px;
+    overflow: auto;
+
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.work-img-link:hover .work-img-descriprion-overlay, 
+.work-img-link:focus .work-img-descriprion-overlay {
+    transform: translateY(0%);
+}
 
 .work-pic {
     display: flex;
@@ -445,6 +522,7 @@ outline: 0px;
 
 .work-img-link {
     display: block;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .work-img-link:hover,
@@ -524,6 +602,7 @@ color: rgba(255, 255, 255, 0.6);
     height: 44px;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
      } 
 .footer-social-list-link:hover,
 .footer-social-list-link:focus {
@@ -566,3 +645,56 @@ margin-bottom: 50px;
 .logo-background-white {color:var(--colour-black);}
     
 /* --------------------------- /COMPONENTS  */
+
+/* --------------------------- BACKDROP  */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1); }
+
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(1.1);
+    opacity: 0;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    width: 528px;
+    height: 581px;
+    background: white;
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-button { 
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: transparent;
+    padding: 0;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+/* --------------------------- /BACKDROP  */
